fix(footer-block): social icons not right aligning

--- a/src/components/footer-block/footer-block.css
+++ b/src/components/footer-block/footer-block.css
@@ -143,7 +143,7 @@ p {
 .footer-detail-right {
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
   width: 50%;
   min-height: 40px;
 }
